🌈 cleaning and adding titles

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -29,6 +29,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "f6318f86",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# csv to pandas dataframe\n",
+    "def csv_to_df(file_name):\n",
+    "    df = pd.read_csv(file_name)\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "914ae776",
+   "metadata": {},
+   "source": [
+    "# From Lat/Lng to Address"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 32,
    "id": "f697980a",
    "metadata": {},
@@ -43,11 +64,6 @@
     }
    ],
    "source": [
-    "# csv to pandas dataframe\n",
-    "def csv_to_df(file_name):\n",
-    "    df = pd.read_csv(file_name)\n",
-    "    return df\n",
-    "\n",
     "data = csv_to_df(file_name='./source/geo_geoloc.csv')\n",
     "\n",
     "# get one random row\n",
@@ -84,6 +100,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ba2efac9",
+   "metadata": {},
+   "source": [
+    "# From Address to Lat/Lng"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "id": "10acd460",
@@ -101,15 +125,11 @@
    "source": [
     "data = csv_to_df(file_name='./source/geo_address.csv')\n",
     "\n",
-    "# get one random row\n",
-    "# data = data.sample(n=1)\n",
-    "\n",
     "# loop trough dataframe\n",
     "for index, row in data.iterrows():\n",
     "\n",
     "    geolocator = Nominatim(user_agent=\"geo-locating-app-demo\")\n",
     "   \n",
-    " \n",
     "    address = row['address']\n",
     "    postal_code = row['postal_code']\n",
     "    city = row['city']\n",
@@ -125,7 +145,6 @@
     "        data.loc[index, 'lng'] = location.longitude\n",
     "    else:\n",
     "        print('No address found')\n",
-    "\n",
     "\n",
     "\n",
     "# save dataframe to new csv file\n",
