👌 ready to share

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "id": "ce56c864",
    "metadata": {},
    "outputs": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "f6318f86",
    "metadata": {},
    "outputs": [],
@@ -37,6 +37,7 @@
     "# csv to pandas dataframe\n",
     "def csv_to_df(file_name):\n",
     "    df = pd.read_csv(file_name)\n",
+    "    print(df.head())\n",
     "    return df"
    ]
   },
@@ -50,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
    "id": "f697980a",
    "metadata": {},
    "outputs": [
@@ -65,9 +66,6 @@
    ],
    "source": [
     "data = csv_to_df(file_name='./source/geo_geoloc.csv')\n",
-    "\n",
-    "# get one random row\n",
-    "# data = data.sample(n=1)\n",
     "\n",
     "# loop trough dataframe\n",
     "for index, row in data.iterrows():\n",
@@ -109,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 43,
    "id": "10acd460",
    "metadata": {},
    "outputs": [
@@ -117,6 +115,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "   id          address  postal_code       city  country\n",
+      "0   1   Rue du Chêne 2         1000  Bruxelles  Belgium\n",
+      "1   2  Grand Route 134         4130     Neupré  Belgium\n",
       "50.8444736 4.350556\n",
       "50.5285449 5.5291691499999995\n"
      ]
@@ -124,6 +125,8 @@
    ],
    "source": [
     "data = csv_to_df(file_name='./source/geo_address.csv')\n",
+    "\n",
+    "print(data.head())\n",
     "\n",
     "# loop trough dataframe\n",
     "for index, row in data.iterrows():\n",
